prevent side scrolling on mobile

--- a/src/IPhone.css
+++ b/src/IPhone.css
@@ -6,6 +6,7 @@
         flex-direction: column;
         align-items: center;
         width: 100%;
+        overflow-x: none;
       }
 
 
@@ -345,5 +346,6 @@
   margin-top: -40px;
   margin-bottom: 60px;
 }
+
 
 }
